# microservice-rs

./: Cargo.toml  README.md  docker-compose.yaml
docker/: Dockerfile  Dockerfile-db
migrations/2018-01-21-095716_messages/: up.sql
src/: main.rs  models.rs  schema.rs
