[package]
name = "microservice"
version = "0.1.0"
authors = ["goldsborough <peter@goldsborough.me>"]

[dependencies]
hyper = "0.11.14"
futures = "0.1.17"
url = "1.6.0"
serde = "1.0.27"
serde_json = "1.0.9"
serde_derive = "1.0.27"
syn = "0.12.7"
glob = "0.2.11"
maud = "0.17.2"
diesel = {version="1.1.0", features = ["postgres"]}
postgres = "0.15.1"
maud_macros = "0.17.2"
env_logger = "0.5.3"
log = "0.4.1"
